--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <div class="king">
+        <div class="title">CAL-CU-LA-TOR<br><br> 
+            <div class="sign"> Probably still buggy<br>but whatever</div>
+        </div>
+        
         <div class="queen">
             <div class="display"></div>
             <div class="firstrow">
